--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ buildscript {
         classpath "org.grails:grails-gradle-plugin:$grailsVersion"
         classpath "com.bertramlabs.plugins:asset-pipeline-gradle:2.8.2"
         classpath "org.grails.plugins:hibernate4:5.0.6"
-        classpath "org.grails.plugins:angular-scaffolding:1.0.0.BUILD-SNAPSHOT"
+        classpath "org.grails.plugins:angular-scaffolding:1.0.0.RC1"
         classpath "com.craigburke.gradle:client-dependencies:1.1.1"
     }
 }
@@ -58,7 +58,7 @@ dependencies {
     compile "org.grails.plugins:scaffolding"
     compile "org.grails.plugins:hibernate4"
     compile "org.hibernate:hibernate-ehcache"
-    compile "org.grails.plugins:angular-scaffolding:1.0.0.BUILD-SNAPSHOT"
+    compile "org.grails.plugins:angular-scaffolding:1.0.0.RC1"
     console "org.grails:grails-console"
     profile "org.grails.profiles:web:3.1.8"
     runtime "com.bertramlabs.plugins:asset-pipeline-grails:2.8.2"
